--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,7 +30,7 @@ jobs:
           sed -i 's/package.name = .*/package.name = kleagueapp/' buildozer.spec
           sed -i 's/package.domain = .*/package.domain = org.kleague/' buildozer.spec
           sed -i 's/^# version = .*/version = 1.0/' buildozer.spec
-          sed -i 's/^# (str) Title of your application.*/title = KLeague Alarm/' buildozer.spec
+          # sed -i 's/^# (str) Title of your application.*/title = KLeague Alarm/' buildozer.spec
           buildozer -v android debug
 
       - name: Upload APK
