--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,20 @@ jobs:
           pip install --upgrade pip
           pip install buildozer cython
 
+      - name: Install Android SDK cmdline-tools
+        run: |
+          mkdir -p $HOME/android-sdk/cmdline-tools
+          cd $HOME/android-sdk/cmdline-tools
+          curl -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip tools.zip
+          mv cmdline-tools latest
+          mkdir -p $HOME/.android && touch $HOME/.android/repositories.cfg
+
+      - name: Accept Android SDK licenses
+        run: |
+          yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/android-sdk --licenses
+
+
       - name: Accept Android SDK licenses
         run: yes | sdkmanager --licenses
 
