--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,18 +24,20 @@ jobs:
           sudo apt install -y zip unzip openjdk-11-jdk python3-pip build-essential git
           pip install --upgrade pip
           pip install buildozer cython
-
-      - name: Install Android SDK command line tools
+          
+      - name: Install Android SDK cmdline-tools
         run: |
+          mkdir -p $HOME/android-sdk/cmdline-tools/latest
+          cd $HOME/android-sdk/cmdline-tools/latest
+          curl -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip tools.zip
           mkdir -p $HOME/.android && touch $HOME/.android/repositories.cfg
-          mkdir -p $HOME/android-sdk/cmdline-tools
-          cd $HOME/android-sdk/cmdline-tools
-          curl -O https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-          unzip commandlinetools-linux-9477386_latest.zip -d latest
+
+      - name: Accept Android SDK licenses
+        run: |
           export ANDROID_SDK_ROOT=$HOME/android-sdk
-          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
           yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platforms;android-30" "build-tools;30.0.3" "platform-tools"
+          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "build-tools;30.0.3" "platforms;android-30"
 
       - name: Build APK with Buildozer
         run: |
