--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,9 +38,9 @@ jobs:
         run: |
           export ANDROID_SDK_ROOT=$HOME/android-sdk
           yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "build-tools;30.0.3" "platforms;android-30"
+          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-30" "build-tools;36.0.0"
           echo "▶ Build-tools 내용 확인:"
-          ls -al $ANDROID_SDK_ROOT/build-tools/30.0.3/
+          ls -al $ANDROID_SDK_ROOT/build-tools/36.0.0/
 
       - name: Build APK with Buildozer
         run: |
@@ -53,9 +53,10 @@ jobs:
           sed -i 's/^# *source.include_exts =.*/source.include_exts = py,png,jpg,kv,atlas/' buildozer.spec
           sed -i 's/^# *log_level = 1/log_level = 2/' buildozer.spec
           sed -i 's/^# *android.api =.*/android.api = 30/' buildozer.spec
-          sed -i "/^\\[app\\]/a android.build_tools_version = 30.0.3" buildozer.spec
-          sed -i "/^\\[app\\]/a android.build_tools_path = $HOME/android-sdk/build-tools/30.0.3" buildozer.spec
+          sed -i "/^\\[app\\]/a android.build_tools_version = 36.0.0" buildozer.spec
+          sed -i "/^\\[app\\]/a android.build_tools_path = $HOME/android-sdk/build-tools/36.0.0" buildozer.spec
           buildozer -v android debug
+
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
