--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,12 +27,13 @@ jobs:
 
       - name: Install Android SDK cmdline-tools
         run: |
-          mkdir -p $HOME/android-sdk/cmdline-tools
-          cd $HOME/android-sdk/cmdline-tools
+          mkdir -p $HOME/android-sdk/cmdline-tools/latest
+          cd $HOME/android-sdk/cmdline-tools/latest
           curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
           unzip commandlinetools.zip
-          mv cmdline-tools latest
+          rm commandlinetools.zip
           mkdir -p $HOME/.android && touch $HOME/.android/repositories.cfg
+
 
       - name: Accept Android SDK licenses and install SDK packages
         run: |
