--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,51 +3,54 @@ name: Build Kivy Android APK
 on:
   push:
     branches:
-      - main  # 또는 master
+      - main  # 원하는 브랜치명
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: ✅ Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: ✅ Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.10'
 
-      - name: Install dependencies
+      - name: ✅ Install dependencies
         run: |
           sudo apt update
           sudo apt install -y zip unzip openjdk-11-jdk python3-pip build-essential git
           pip install --upgrade pip
           pip install buildozer cython
 
-      - name: Install Android SDK cmdline-tools
+      - name: ✅ Install Android SDK cmdline-tools (정확한 구조)
         run: |
-          mkdir -p $HOME/android-sdk/cmdline-tools/latest
-          cd $HOME/android-sdk/cmdline-tools/latest
-          curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-          unzip commandlinetools.zip
-          rm commandlinetools.zip
+          mkdir -p $HOME/android-sdk/cmdline-tools
+          cd $HOME/android-sdk/cmdline-tools
+          curl -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip tools.zip
+          rm tools.zip
+          mv cmdline-tools latest
           mkdir -p $HOME/.android && touch $HOME/.android/repositories.cfg
 
-
-      - name: Accept Android SDK licenses and install SDK packages
+      - name: ✅ Accept licenses & install Android packages
         run: |
           export ANDROID_SDK_ROOT=$HOME/android-sdk
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-30" "build-tools;36.0.0"
-          echo "▶ Build-tools 내용 확인:"
-          ls -al $ANDROID_SDK_ROOT/build-tools/36.0.0/
+          export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH
+          yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-30" "build-tools;36.0.0"
 
-      - name: Build APK with Buildozer
+      - name: ✅ Build APK with Buildozer
         run: |
+          export ANDROID_SDK_ROOT=$HOME/android-sdk
           export ANDROID_HOME=$HOME/android-sdk
           export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
+
           buildozer init
+
+          # buildozer.spec 설정 변경
           sed -i 's/^# *title =.*/title = KLeague Alarm/' buildozer.spec
           sed -i 's/^# *package.name =.*/package.name = kleaguealarm/' buildozer.spec
           sed -i 's/^# *package.domain =.*/package.domain = org.kleague/' buildozer.spec
@@ -55,11 +58,11 @@ jobs:
           sed -i 's/^# *log_level = 1/log_level = 2/' buildozer.spec
           sed -i 's/^# *android.api =.*/android.api = 30/' buildozer.spec
           sed -i "/^\\[app\\]/a android.build_tools_version = 36.0.0" buildozer.spec
-          sed -i "/^\\[app\\]/a android.build_tools_path = $HOME/android-sdk/build-tools/36.0.0" buildozer.spec
+          sed -i "/^\\[app\\]/a android.build_tools_path = \$HOME/android-sdk/build-tools/36.0.0" buildozer.spec
+
           buildozer -v android debug
 
-
-      - name: Upload APK
+      - name: 📦 Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: kleague-alarm.apk
